Fix x-overflow

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -21,6 +21,7 @@ btns-hover:hover {
 body {
     background-color: #40F8FF;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 #FFC43
 
